# Hafifot

./: ...  .gitignore  README.md  mkdocs.yml  setup.md
content/: README.md  linux_um.md
content/development_basics/: git.md
content/linux_um/: introduction.md  shell.md  shtrudel.md  strace.md  tcpdump.md  user_management.md
content/machine_setup/: basics.md  installation.md  prerequisites.md
linux_um/: CMakeLists.txt  ifconfig_script.c  ifconfig_script.h  ifconfig_script.sh  ps_result  ps_script.sh  strace_answers
shtrudel/: CMakeLists.txt  shtrudel.c  shtrudel.h
